--- a/templates/admin/organizations.html
+++ b/templates/admin/organizations.html
@@ -11,7 +11,7 @@
     <p class="control">
         <button type="button" class="button is-success"
             onclick="location.href='add-organization'"
-            id="saveButtonLastName">Lägg till</button></p>
+            id="saveButton">Lägg till</button></p>
     </div>
 </div>
 </div>
