--- a/templates/admin/add-organization.html
+++ b/templates/admin/add-organization.html
@@ -1,8 +1,14 @@
 {% extends "../base.html" %}
+{% block head %}
+<link rel="stylesheet" href="{{ static_url('css/edit-organization.bundle.css') }}">
+{% end %}
 {% block content %}
 {% module xsrf_form_html() %}
 <div class="section">
 <div class="container">
+    <div class="content">
+        <h1 class="">Skapa förening</h1>
+    </div>
     <div class="field">
         <div class="label">Namn</div>
         <div class="control">
@@ -15,6 +21,19 @@
             <input class="input" name="description" type="text" placeholder="Name">
         </div>
     </div>
+    <div id="recruitmentArea" class="panel is-primary">
+        <p class="panel-heading">
+            Upptagningsområden
+        </p>
+        <div class="panel-block">
+            <p class="control has-icons-left">
+                <input id="searchArea" class="input is-primary" type="text" placeholder="Sök">
+                <span class="icon is-left">
+                    <i class="fas fa-search" aria-hidden="true"></i>
+                </span>
+            </p>
+        </div>
+    </div>
     <div class="field">
         <label class="checkbox">
         <input type="checkbox", name="active">
@@ -22,47 +41,37 @@
     </label>
     </div>
     <div class="control">
-        <button type="button"
-            class="button is-success"
-            onclick="submit()"
-            id="saveButtonLastName">Spara</button></p>
+        <button id="saveButton" type="button" class="button is-success">Spara</button>
     </div>
 </div>
 </div>
 {% end %}
 {% block scripts %}
 <script type="text/javascript" charset="utf-8">
-    async function postData(url = '', data = {}) {
-        const response = await fetch(url, {
-            method: 'POST', // *GET, POST, PUT, DELETE, etc.
-            mode: 'cors', // no-cors, *cors, same-origin
-            cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-            credentials: 'same-origin', // include, *same-origin, omit
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded',
-            },
-            redirect: 'follow',
-            referrerPolicy: 'no-referrer',
-            body: data
-        });
-        return await response.json(); // parses JSON response into native JavaScript objects
-    }
+    let geodata = {};
+    let countryID = "{{ country.id }}";
 
-
-    function submit() {
-        const details = {
-            '_xsrf' : document.getElementsByName("_xsrf")[0].value,
-            'name': document.getElementsByName("name")[0].value,
-            'description': document.getElementsByName("description")[0].value,
-            'active': document.getElementsByName("active")[0].checked
-        }
-
-        const formBody = Object.keys(details).map(key => encodeURIComponent(key) + '=' + encodeURIComponent(details[key])).join('&')
-
-        postData('/api/organization', formBody).then((data) => {
-            console.log(data); // JSON data parsed by `response.json()` call
-            window.location.href = 'organizations'
-        })
-    }
+    geodata["{{ country.id }}"] = {
+        name: "{{ country.name }}",
+        id: "{{ country.id }}",
+        type: "COUNTRY"
+    };
+    {% for area in areas %}
+    geodata["{{ area.id }}"] = {
+        name: "{{ area.name }}",
+        id: "{{ area.id }}",
+        type: "AREA",
+        path: "{{ area.path }}"
+    };
+    {% end %}
+    {% for municipality in municipalities %}
+    geodata["{{ municipality.id }}"] = {
+        name: "{{ municipality.name }}",
+        id: "{{ municipality.id }}",
+        type: "MUNICIPALITY",
+        area: "{{ municipality.area_id }}"
+    };
+    {% end %}
 </script>
+<script src="{{ static_url('add-organization.bundle.js') }}"></script>
 {% end %}
