--- a/templates/admin/members.html
+++ b/templates/admin/members.html
@@ -7,7 +7,7 @@
         number: "{{ member.traits['member_number'] }}",
         name: "{{ member.traits['name']['first'] + " " + member.traits['name']['last'] }}",
         email: "{{ member.traits['email'] }}",
-        phone: "070000000",
+        phone: "{{ member.traits['phone'] }}",
         postalCode: "{{ member.traits['postal_address']['postal_code'] }}",
         city: "{{ member.traits['postal_address']['city'] }}",
         street: "{{ member.traits['postal_address']['street'] }}",
