feat: publish posts
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,11 +76,11 @@
                             Min partimail
                         </a>
                         <hr class="navbar-divider">
-                        <a href="sendmail.html" class="navbar-item">
-                            Skicka mail till medlemmar
+                        <a href="/feed" class="navbar-item">
+                            Se flödet
                         </a>
-                        <a href="sendsms.html" class="navbar-item">
-                            Skicka sms till medlemmar
+                        <a href="/feed/post" class="navbar-item">
+                            Skapa inlägg
                         </a>
                     </div>
                 </div>
