--- a/templates/admin/add-organization.html
+++ b/templates/admin/add-organization.html
@@ -1,49 +1,49 @@
 {% extends "../base.html" %}
 {% block head %}
-<link rel="stylesheet" href="{{ static_url('css/edit-organization.bundle.css') }}">
+<link rel="stylesheet" href="{{ static_url('css/add-organization.bundle.css') }}">
 {% end %}
 {% block content %}
 {% module xsrf_form_html() %}
 <div class="section">
-<div class="container">
-    <div class="content">
-        <h1 class="">Skapa förening</h1>
-    </div>
-    <div class="field">
-        <div class="label">Namn</div>
-        <div class="control">
-            <input class="input" name="name" type="text" placeholder="Name">
+    <div class="container">
+        <div class="content">
+            <h1 class="">Skapa förening</h1>
         </div>
-    </div>
-    <div class="field">
-        <div class="label">Beskrivning</div>
-        <div class="control">
-            <input class="input" name="description" type="text" placeholder="Name">
+        <div class="field">
+            <div class="label">Namn</div>
+            <div class="control">
+                <input class="input" name="name" type="text" placeholder="Name">
+            </div>
         </div>
-    </div>
-    <div id="recruitmentArea" class="panel is-primary">
-        <p class="panel-heading">
-            Upptagningsområden
-        </p>
-        <div class="panel-block">
-            <p class="control has-icons-left">
-                <input id="searchArea" class="input is-primary" type="text" placeholder="Sök">
-                <span class="icon is-left">
-                    <i class="fas fa-search" aria-hidden="true"></i>
-                </span>
+        <div class="field">
+            <div class="label">Beskrivning</div>
+            <div class="control">
+                <input class="input" name="description" type="text" placeholder="Name">
+            </div>
+        </div>
+        <div id="recruitmentArea" class="panel is-primary">
+            <p class="panel-heading">
+                Upptagningsområden
             </p>
+            <div class="panel-block">
+                <p class="control has-icons-left">
+                    <input id="searchArea" class="input is-primary" type="text" placeholder="Sök">
+                    <span class="icon is-left">
+                        <i class="fas fa-search" aria-hidden="true"></i>
+                    </span>
+                </p>
+            </div>
+        </div>
+        <div class="field">
+            <label class="checkbox">
+                <input type="checkbox" name="active">
+                Aktiv
+            </label>
+        </div>
+        <div class="control">
+            <button id="saveButton" type="button" class="button is-success">Spara</button>
         </div>
     </div>
-    <div class="field">
-        <label class="checkbox">
-        <input type="checkbox", name="active">
-        Aktiv
-    </label>
-    </div>
-    <div class="control">
-        <button id="saveButton" type="button" class="button is-success">Spara</button>
-    </div>
-</div>
 </div>
 {% end %}
 {% block scripts %}
