feat: add calender with ics support
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,9 @@
                         <a href="/admin/organizations" class="navbar-item">
                             Föreningar
                         </a>
+                        <a href="/admin/calendar" class="navbar-item">
+                            Kalender
+                        </a>
                         <a href="/admin/members" class="navbar-item">
                             Medlemmar
                         </a>
