--- a/templates/admin/members.html
+++ b/templates/admin/members.html
@@ -1,39 +1,35 @@
 {% extends "../base.html" %}
-{% block head %}
-<script type="text/javascript">
-    var _GRID_DATA_ = [
-    {% for member in members %}
-    {
-        number: "{{ member.traits['member_number'] }}",
-        name: "{{ member.traits['name']['first'] + " " + member.traits['name']['last'] }}",
-        email: "{{ member.traits['email'] }}",
-        phone: "{{ member.traits['phone'] }}",
-        postalCode: "{{ member.traits['postal_address']['postal_code'] }}",
-        city: "{{ member.traits['postal_address']['city'] }}",
-        street: "{{ member.traits['postal_address']['street'] }}",
-        country: "{{ member.traits['country'] }}"
-    },
-    {% end %}
-];
-</script>
-<script src="{{ static_url('members.bundle.js') }}"></script>
-{% end %}
 {% block content %}
 <div class="section">
-<div class="container">
-    <h1 class="title">Medlemmar</h1>
-    <div class="select">
-        <select id="orgs">
-            {% for org in organizations %}
-            <option value="{{ org.id }}">{{ org.name }}</option>
-            {% end %}
-        </select>
+    <div class="container">
+        <h1 class="title">Medlemmar</h1>
+        <div class="select">
+            <select id="orgs">
+                {% for org in organizations %}
+                <option value="{{ org.id }}">{{ org.name }}</option>
+                {% end %}
+            </select>
+        </div>
+        <div id="myGrid" class="ag-theme-alpine"></div>
     </div>
-    <div id="myGrid" style="width: 100%; height: 80vh;" class="ag-theme-alpine"></div>
-</div>
 </div>
 {% end %}
-
 {% block scripts %}
-
+<script type="text/javascript">
+    var _GRID_DATA_ = [
+        {% for member in members %}
+        {
+            number: "{{ member.traits['member_number'] }}",
+            name: "{{ member.traits['name']['first'] + " " + member.traits['name']['last'] }}",
+            email: "{{ member.traits['email'] }}",
+            phone: "{{ member.traits['phone'] }}",
+            postalCode: "{{ member.traits['postal_address']['postal_code'] }}",
+            city: "{{ member.traits['postal_address']['city'] }}",
+            street: "{{ member.traits['postal_address']['street'] }}",
+            country: "{{ member.traits['country'] }}"
+        },
+        {% end %}
+    ];
+</script>
+<script src="{{ static_url('members.bundle.js') }}"></script>
 {% end %}
