--- a/templates/main.html
+++ b/templates/main.html
@@ -61,7 +61,7 @@
                     Kalender
                 </h1>
             </div>
-            <div id="calender" style="max-width: 900px;"></div>
+            <div id="calendar" style="max-width: 900px;"></div>
         </div>
     </div>
 </section>
