--- a/templates/admin/organizations.html
+++ b/templates/admin/organizations.html
@@ -4,7 +4,7 @@
 <div class="section">
     <div class="container">
         <h1 class="title">Föreningar</h1>
-        <div id="organizations" class="ag-theme-alpine"></div>
+        <div id="organizations" class="ag-theme-alpine" style="margin-bottom: 1rem;"></div>
         <div class="field is-grouped">
             <p class="control">
                 <button type="button" class="button is-success" onclick="location.href='add-organization'"
