--- a/templates/admin/geography.html
+++ b/templates/admin/geography.html
@@ -5,7 +5,14 @@
 {% block content %}
 <section class="section">
     <div class="container">
-        <h1 class="title">Geografi</h1>
+        <div class="content">
+            <h1>Geografi</h1>
+            <p>
+                Geografin i systemet består av 3 komponenter: länder, områden och kommuner. Alla användare, föreningar, områden och kommuner tillhör ett land.
+                Områden är till för att dela in kommuner och andra områden i olika distrikt och detta görs genom en trädstruktur. Exempel på indelningar kan vara föreningsdistrikt, regioner eller valkretsar.
+                Kommuner representerar den lägsta nivån och alla användare tillhör en kommun. Kommuner tillhör alltid ett land men kan också tillhöra områden, kommuner har dock inte något under sig, varken områden eller andra kommuner.
+            </p>
+        </div>
         <div class="select">
             <select id="country" name="country">
                 <option disabled selected value>Välj land</option>
@@ -14,7 +21,7 @@
                 {% end %}
             </select>
         </div>
-        <button id="moveButton" type="button" class="button is-link">
+        <button id="moveButton" type="button" class="button is-success">
             <span class="icon"><i class="fas fa-arrows-alt" aria-hidden="true"></i></span>
             <span>Flytta runt områden</span>
         </button>
@@ -26,9 +33,18 @@
         <br>
         <div class="field">
             <div class="buttons">
-                <button id="addCountry" class="button is-primary">Skapa land</button>
-                <button id="addArea" class="button is-primary">Skapa område</button>
-                <button id="addMunicipality" class="button is-primary">Skapa kommun</button>
+                <button id="addCountry" class="button is-success">
+                    <span class="icon"><i class="fas fa-flag" aria-hidden="true"></i></span>
+                    <span>Skapa land</span>
+                </button>
+                <button id="addArea" class="button is-success">
+                    <span class="icon"><i class="fas fa-layer-group" aria-hidden="true"></i></span>
+                    <span>Skapa område</span>
+                </button>
+                <button id="addMunicipality" class="button is-success">
+                    <span class="icon"><i class="fas fa-home" aria-hidden="true"></i></span>
+                    <span>Skapa kommun</span>
+                </button>
             </div>
         </div>
         {% module xsrf_form_html() %}
