--- a/templates/feed/feed.html
+++ b/templates/feed/feed.html
@@ -10,7 +10,7 @@
                 <div class="media-content">
                     <div class="content">
                         <h3>{{ xhtml_escape(post.title) }}</h3>
-                        <b>{{ authors[post.author].name.first + " " + authors[post.author].name.last }}</b>
+                        <b>{{ xhtml_escape(authors[post.author].name.first) + " " + xhtml_escape(authors[post.author].name.last) }}</b>
                         <hr>
                         {{ post.content }}
                         <br>
