feat: edit parent organization through frontend
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/admin/edit-organization.html
+++ b/templates/admin/edit-organization.html
@@ -21,6 +21,17 @@
                 <input class="input" name="description" type="text" value="{{ organization.description }}">
             </div>
         </div>
+        <div class="field">
+            <div class="label" >Medlems/lokalförening i:</div>
+            <div class="control">
+                <select class="input" name="parent_id" type="text" data-value="{{ parent_id }}">
+                    <option selected value="{{ organization.id }}">Ingen</option>
+                    {% for org in organizations %}
+                    <option value="{{ org.id }}">{{ org.name }}</option>
+                    {% end %}
+                </select>
+            </div>
+        </div>
         <div id="recruitmentArea" class="panel is-primary">
             <p class="panel-heading">
                 Upptagningsområden
