--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
             <div class="navbar-end">
                 {% if admin is True %}
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">
+                    <a href="/admin" class="navbar-link">
                         <span class="icon"><i class="fas fa-comments" aria-hidden="true"></i></span>
                         <p>Administration</p>
                     </a>
